; ModuleID = '/home/carl/AnghaBench/h2o/deps/quicly/t/extr_..libquicly.c_on_ack_rst_stream.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/quicly/t/extr_..libquicly.c_on_ack_rst_stream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_16__ = type { %struct.TYPE_12__ }
%struct.TYPE_12__ = type { %struct.TYPE_11__ }
%struct.TYPE_11__ = type { i32 }
%struct.TYPE_15__ = type { %struct.TYPE_14__ }
%struct.TYPE_14__ = type { %struct.TYPE_13__ }
%struct.TYPE_13__ = type { i32 }

@QUICLY_SENTMAP_EVENT_EXPIRED = common dso_local global i64 0, align 8
@QUICLY_SENTMAP_EVENT_ACKED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, %struct.TYPE_16__*, i64)* @on_ack_rst_stream to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @on_ack_rst_stream(i32* %0, i32* %1, %struct.TYPE_16__* %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_16__*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.TYPE_15__*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store %struct.TYPE_16__* %2, %struct.TYPE_16__** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i64, i64* %8, align 8
  %11 = load i64, i64* @QUICLY_SENTMAP_EVENT_EXPIRED, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %40

13:                                               ; preds = %4
  %14 = load i32*, i32** %5, align 8
  %15 = load %struct.TYPE_16__*, %struct.TYPE_16__** %7, align 8
  %16 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call %struct.TYPE_15__* @quicly_get_stream(i32* %14, i32 %19)
  store %struct.TYPE_15__* %20, %struct.TYPE_15__** %9, align 8
  %21 = icmp ne %struct.TYPE_15__* %20, null
  br i1 %21, label %22, label %39

22:                                               ; preds = %13
  %23 = load %struct.TYPE_15__*, %struct.TYPE_15__** %9, align 8
  %24 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %25, i32 0, i32 0
  %27 = load i64, i64* %8, align 8
  %28 = load i64, i64* @QUICLY_SENTMAP_EVENT_ACKED, align 8
  %29 = icmp eq i64 %27, %28
  %30 = zext i1 %29 to i32
  %31 = call i32 @on_ack_stream_state_sender(i32* %26, i32 %30)
  %32 = load %struct.TYPE_15__*, %struct.TYPE_15__** %9, align 8
  %33 = call i64 @stream_is_destroyable(%struct.TYPE_15__* %32)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %38

35:                                               ; preds = %22
  %36 = load %struct.TYPE_15__*, %struct.TYPE_15__** %9, align 8
  %37 = call i32 @destroy_stream(%struct.TYPE_15__* %36, i32 0)
  br label %38

38:                                               ; preds = %35, %22
  br label %39

39:                                               ; preds = %38, %13
  br label %40

40:                                               ; preds = %39, %4
  ret i32 0
}

declare dso_local %struct.TYPE_15__* @quicly_get_stream(i32*, i32) #1

declare dso_local i32 @on_ack_stream_state_sender(i32*, i32) #1

declare dso_local i64 @stream_is_destroyable(%struct.TYPE_15__*) #1

declare dso_local i32 @destroy_stream(%struct.TYPE_15__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
